1. Implemented AltTranslation annotation for TTX filter, removed all dependencies to ScoreInfo. 2. Added unit test to Quality Check step
git-svn-id: https://okapi.googlecode.com/svn/trunk@4735 0cd2bb99-014b-0410-b875-5d0485b745ed